<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SarPaper 1.0 FTP</string>
    <string name="action_settings">Impostazioni</string>
    <string name="hello_world"></string>
    <string name="title_activity_telephony_demo">SarPaper 1.0 FTP</string>
    <string name="title_activity_view_statistics">Statistiche</string>
   <string name="link_progetti">http://www.arpa.piemonte.it/approfondimenti/temi-ambientali/campi-elettromagnetici/cem/progetti</string>
    <string name="titChiusuraApp">Chiusura SARPAPER</string>
    <string name="msgChiusuraApp">Sei sicuro di voler chiudere l\'applicazione?\nSi chiudera\' anche il servizio di monitoring SARPAPER.</string>
    <string name="yes">Si</string>
    <string name="noExit">Non esco</string>
    <string name="titStatGlobal">STATISTICHE TOTALI</string>
    <string name="subTitStatGlobal">Dall\'attivazione a oggi</string>
    <string name="titStat">STATISTICHE</string>
    <string name="subTitStatLatsCall">Ultima chiamata effettuata</string>
    <string name="titLastCall">Report Ultima Chiamata\n\n</string>
    <string name="titAttService">ATTIVAZIONE SERVIZIO</string>
    <string name="titLastData">ULTIMI VALORI RILEVATI</string>
    <string name="titRete">Rete</string>
    <string name="loading">caricamento...</string>
    <string name="dbm_segnale">dBm segnale</string>
    <string name="speaker">Speaker</string>
    <string name="titDatiGenerali">DATI GENERALI</string>
    <string name="titNChiamate">N° chiamate</string>
    <string name="titDurataChiamate">Durata chiamate</string>
    <string name="titTempoServizio">Tempo servizio</string>
    <string name="titGraphStat">Ausilio di Auricolare/Vivavoce</string>
    <string name="with">con-senza</string>
    <string name="TitDatiPerc">Dati in %</string>
    <string name="TitEspoNodev">Esposizione SENZA ausili</string>
    <string name="TitBassa">BASSA</string>
    <string name="TitMedia">MEDIA</string>
    <string name="TitAlta">ALTA</string>
    <string name="TitCon">CON</string>
    <string name="TitSenza">SENZA</string>
 <string name="TitOggi">OGGI</string>
 <string name="TitIeri">IERI</string>
 <string name="TitUnaGiornata">"1 giornata "</string>
 <string name="TitQuestaSettimana">Questa SETTIMANA</string>
 <string name="TitScorsaSettimana">Scorsa SETTIMANA</string>
 <string name="TitQuestoMese">Questo MESE</string>
 <string name="TitScorsoMese">Scorso MESE</string>
 <string name="cmdClose">Chiudi</string>
</resources>